--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,13 +4,16 @@ spring:
     username: ${SPRING_DATASOURCE_USERNAME:postgres}
     password: ${SPRING_DATASOURCE_USERNAME:postgres}
     driver-class-name: org.postgresql.Driver
-
   jpa:
     hibernate:
     show-sql: true
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
+        default_schema: inventory
+  flyway:
+    schemas: inventory
+    enabled: true
 
 management:
   endpoint:
